--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,7 +1,7 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Levels/LabLevel.LabLevel
+GameDefaultMap=/Game/Levels/OpenMenu.OpenMenu
 EditorStartupMap=/Game/Levels/LabLevel.LabLevel
 GameInstanceClass=/Script/ChallengeThem.CHTGameInstance
 
