--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,7 +2,7 @@
 
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/Levels/OpenMenu.OpenMenu
-EditorStartupMap=/Game/Levels/LabLevel.LabLevel
+EditorStartupMap=/Game/Levels/OpenMenu.OpenMenu
 GameInstanceClass=/Script/ChallengeThem.CHTGameInstance
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
